[tool.poetry]
name = "startupofyear"
version = "0.1.0"
description = ""
authors = ["Omulosi <mulongojohnpaul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
lxml = "^4.6.4"
selenium = "^4.1.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
